--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/vimpelcom/b81e42cf-bf89-4828-b553-e716a3714887'>VEON - Internship ES BSD</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://swapfiets.recruitee.com/o/graphic-design-internship'>
       Graphic Design Internship - Swapfiets
     </a></h5> 
@@ -143,7 +151,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
+<h5><a href='https://jobs.lever.co/waveapps/87383c38-68ad-4518-a71f-69a0d18ce820'>Wave Financial - Intern, Finance and Accounting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -205,7 +213,7 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/piccollage/f6a48ab4-171b-4d20-a3cd-adf690031c72'>PicCollage - Product Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/piccollage/f6a48ab4-171b-4d20-a3cd-adf690031c72'>PicCollage - Product Intern</a></h5> 
 <p><span class="badge badge-light">Taipei</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -388,11 +396,11 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nice-systems-old/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nice-systems-old/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787199'>Job Application for Account Management Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -458,14 +466,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <hr/>
 <h5><a href='https://boards.greenhouse.io/velodyne/jobs/1762722'>Job Application for Intern at Velodyne</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/o3BCafwa'>Trek Bicycle Karrieren?Marketing Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://frosch-travel.workable.com/j/A7B6CD755E'>FROSCH TRAVEL - Jobs: Human Resources Intern - Apply online</a></h5> 
-<p><span class="badge badge-light">Texas, United States New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
